--- a/src/css/app.css
+++ b/src/css/app.css
@@ -9,6 +9,7 @@ html, body {
 }
 
 .box {
+    min-height: 200px;
 }
 
 .box .box__wrapper {
@@ -19,7 +20,7 @@ html, body {
 
 .btn {
     text-decoration: none;
-    font-family: "Nunito Sans",sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-weight: 700;
     font-size: 1rem;
     text-align: center;
@@ -46,6 +47,27 @@ html, body {
     max-width: 3.375rem;
     height: 100%;
     max-height: 3.375rem;
+    position: relative;
+}
+
+[href^='http']::after {
+
+}
+
+.btn-icon::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    height: 100%;
+    width: 100%;
+    max-width: 3.375rem;
+    max-height: 3.375rem;
+    background-image: url('../images/icon_arrow.svg');
+    background-position: center;
+    background-size: 21px 22px;
+    background-repeat: no-repeat;
 }
 
 .btn-primary {
@@ -72,7 +94,8 @@ html, body {
     border-color: var(--primary-color);
 }
 
-.btn-outline{}
+.btn-outline {
+}
 
 
 .intro {
@@ -190,14 +213,14 @@ html, body {
     margin-bottom: 3.375rem;
 }
 
-.hero .hero__box{
+.hero .hero__box {
     max-height: 4.125rem;
     display: flex;
     justify-content: center;
     width: 100%;
 }
 
-.hero .hero__link{
+.hero .hero__link {
     display: inline-block;
     padding-bottom: 1.5625rem;
     padding-top: 1.5625rem;
